reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__external_impls.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::Test"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::Test"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "indexmap::IndexMap",
        "description": "Key-value map type ordered by insertion",
        "parameters": [
          {
            "name": "K"
          },
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::collections::HashMap",
          "arguments": [
            {
              "name": "K"
            },
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "indexmap::IndexSet",
        "description": "Set type ordered by insertion",
        "parameters": [
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::collections::HashSet",
          "arguments": [
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Test",
        "fields": {
          "named": [
            {
              "name": "index_map",
              "type": {
                "name": "indexmap::IndexMap",
                "arguments": [
                  {
                    "name": "u8"
                  },
                  {
                    "name": "u32"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "index_set",
              "type": {
                "name": "indexmap::IndexSet",
                "arguments": [
                  {
                    "name": "std::string::String"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "url",
              "type": {
                "name": "url::Url"
              },
              "required": true
            },
            {
              "name": "json",
              "type": {
                "name": "serde_json::Value"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "serde_json::Value",
        "description": "JSON value type"
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashMap",
        "description": "Key-value map type",
        "parameters": [
          {
            "name": "K"
          },
          {
            "name": "V"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashSet",
        "description": "Value set type",
        "parameters": [
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "arguments": [
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "url::Url",
        "description": "URL value type",
        "fallback": {
          "name": "std::string::String"
        }
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "indexmap::IndexMap",
        "description": "Key-value map type ordered by insertion",
        "parameters": [
          {
            "name": "K"
          },
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::collections::HashMap",
          "arguments": [
            {
              "name": "K"
            },
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "indexmap::IndexSet",
        "description": "Set type ordered by insertion",
        "parameters": [
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::collections::HashSet",
          "arguments": [
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Test",
        "fields": {
          "named": [
            {
              "name": "index_map",
              "type": {
                "name": "indexmap::IndexMap",
                "arguments": [
                  {
                    "name": "u8"
                  },
                  {
                    "name": "u32"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "index_set",
              "type": {
                "name": "indexmap::IndexSet",
                "arguments": [
                  {
                    "name": "std::string::String"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "url",
              "type": {
                "name": "url::Url"
              },
              "required": true
            },
            {
              "name": "json",
              "type": {
                "name": "serde_json::Value"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "serde_json::Value",
        "description": "JSON value type"
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashMap",
        "description": "Key-value map type",
        "parameters": [
          {
            "name": "K"
          },
          {
            "name": "V"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashSet",
        "description": "Value set type",
        "parameters": [
          {
            "name": "V"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "arguments": [
            {
              "name": "V"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      },
      {
        "kind": "primitive",
        "name": "url::Url",
        "description": "URL value type",
        "fallback": {
          "name": "std::string::String"
        }
      }
    ]
  }
}
