reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_internally_tagged-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Test"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Test"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.A": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.A",
        "required": [
          "a"
        ],
        "properties": {
          "a": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "reflectapi_demo.tests.serde.B": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.B",
        "required": [
          "b"
        ],
        "properties": {
          "b": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "reflectapi_demo.tests.serde.Test": {
        "oneOf": [
          {
            "allOf": [
              {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.A"
              },
              {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.B"
              },
              {
                "type": "object",
                "title": "reflectapi_demo.tests.serde.S<reflectapi_demo.tests.serde.A, reflectapi_demo.tests.serde.B>",
                "properties": {}
              },
              {
                "description": "tag object",
                "type": "object",
                "title": "tag",
                "required": [
                  "type"
                ],
                "properties": {
                  "type": {
                    "const": "S"
                  }
                }
              }
            ]
          }
        ]
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
