reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_unit-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "allOf": [
                  {
                    "$ref": "#/components/schemas/reflectapi_demo.tests.serde.K"
                  },
                  {
                    "$ref": "#/components/schemas/std.tuple.Tuple0"
                  },
                  {
                    "type": "object",
                    "title": "reflectapi_demo.tests.serde.S<reflectapi_demo.tests.serde.K, std.tuple.Tuple0>",
                    "properties": {}
                  }
                ]
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "allOf": [
                    {
                      "$ref": "#/components/schemas/reflectapi_demo.tests.serde.K"
                    },
                    {
                      "$ref": "#/components/schemas/std.tuple.Tuple0"
                    },
                    {
                      "type": "object",
                      "title": "reflectapi_demo.tests.serde.S<reflectapi_demo.tests.serde.K, std.tuple.Tuple0>",
                      "properties": {}
                    }
                  ]
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.K": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.K",
        "required": [
          "a"
        ],
        "properties": {
          "a": {
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "std.tuple.Tuple0": {
        "description": "Unit type",
        "type": "null"
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
