reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_unit.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::S",
        "arguments": [
          {
            "name": "reflectapi_demo::tests::serde::K"
          },
          {
            "name": "std::tuple::Tuple0"
          }
        ]
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::S",
        "arguments": [
          {
            "name": "reflectapi_demo::tests::serde::K"
          },
          {
            "name": "std::tuple::Tuple0"
          }
        ]
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::K",
        "fields": {
          "named": [
            {
              "name": "a",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::S",
        "parameters": [
          {
            "name": "Payload"
          },
          {
            "name": "Additional"
          }
        ],
        "fields": {
          "named": [
            {
              "name": "payload",
              "type": {
                "name": "Payload"
              },
              "required": true,
              "flattened": true
            },
            {
              "name": "additional",
              "type": {
                "name": "Additional"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple0",
        "description": "Unit type"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::K",
        "fields": {
          "named": [
            {
              "name": "a",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::S",
        "parameters": [
          {
            "name": "Payload"
          },
          {
            "name": "Additional"
          }
        ],
        "fields": {
          "named": [
            {
              "name": "payload",
              "type": {
                "name": "Payload"
              },
              "required": true,
              "flattened": true
            },
            {
              "name": "additional",
              "type": {
                "name": "Additional"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple0",
        "description": "Unit type"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
