reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__nested_internally_tagged_enums-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Test"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Test"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.Test": {
        "oneOf": [
          {
            "oneOf": [
              {
                "type": "object",
                "title": "A",
                "required": [
                  "a",
                  "type",
                  "version"
                ],
                "properties": {
                  "a": {
                    "$ref": "#/components/schemas/u8"
                  },
                  "type": {
                    "const": "A"
                  },
                  "version": {
                    "const": "v1"
                  }
                }
              },
              {
                "type": "object",
                "title": "B",
                "required": [
                  "b",
                  "type",
                  "version"
                ],
                "properties": {
                  "b": {
                    "$ref": "#/components/schemas/u16"
                  },
                  "type": {
                    "const": "B"
                  },
                  "version": {
                    "const": "v1"
                  }
                }
              }
            ]
          },
          {
            "oneOf": [
              {
                "type": "object",
                "title": "C",
                "required": [
                  "c",
                  "type",
                  "version"
                ],
                "properties": {
                  "c": {
                    "$ref": "#/components/schemas/u32"
                  },
                  "type": {
                    "const": "C"
                  },
                  "version": {
                    "const": "v2"
                  }
                }
              },
              {
                "type": "object",
                "title": "D",
                "required": [
                  "d",
                  "type",
                  "version"
                ],
                "properties": {
                  "d": {
                    "$ref": "#/components/schemas/u64"
                  },
                  "type": {
                    "const": "D"
                  },
                  "version": {
                    "const": "v2"
                  }
                }
              }
            ]
          }
        ]
      },
      "reflectapi_demo.tests.serde.V1": {
        "oneOf": [
          {
            "type": "object",
            "title": "A",
            "required": [
              "a",
              "type"
            ],
            "properties": {
              "a": {
                "$ref": "#/components/schemas/u8"
              },
              "type": {
                "const": "A"
              }
            }
          },
          {
            "type": "object",
            "title": "B",
            "required": [
              "b",
              "type"
            ],
            "properties": {
              "b": {
                "$ref": "#/components/schemas/u16"
              },
              "type": {
                "const": "B"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.serde.V2": {
        "oneOf": [
          {
            "type": "object",
            "title": "C",
            "required": [
              "c",
              "type"
            ],
            "properties": {
              "c": {
                "$ref": "#/components/schemas/u32"
              },
              "type": {
                "const": "C"
              }
            }
          },
          {
            "type": "object",
            "title": "D",
            "required": [
              "d",
              "type"
            ],
            "properties": {
              "d": {
                "$ref": "#/components/schemas/u64"
              },
              "type": {
                "const": "D"
              }
            }
          }
        ]
      },
      "u16": {
        "description": "16-bit unsigned integer",
        "type": "integer"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      },
      "u64": {
        "description": "64-bit unsigned integer",
        "type": "integer"
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
